--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -1,6 +1,6 @@
 :root {
   --color-primary: #202020;
-  --color-secondary: #2E2E2E;
+  --color-secondary: #2e2e2e;
   --color-light: #343459;
   --color-gray-light: #cfcfcf;
 }
@@ -9,7 +9,6 @@
   min-height: 100vh;
   width: 100vw;
   background-color: var(--color-primary);
-
 }
 
 .nav {
@@ -20,13 +19,12 @@
   display: flex;
   flex-direction: column;
   justify-content: left;
-
 }
 
 .nav-main {
   max-width: 100vw;
   height: 50px;
-  background-color: #2E2E2E;
+  background-color: #2e2e2e;
 
   display: flex;
   flex-direction: row;
@@ -64,11 +62,9 @@
   font-style: oblique;
 }
 
-
 .nav-main p {
   color: white;
   font-size: 12px;
-  
 }
 
 .dashboard {
@@ -84,14 +80,11 @@
 .dashboard-container {
   max-width: 100vw;
   height: 90vh;
-  
 
   padding-top: 5rem;
   align-items: flex-start;
   justify-content: center;
-
 }
-
 
 .operations-crud {
   /*border: 2px solid #020116;
@@ -101,7 +94,6 @@
   border-radius: 25px;
 }
 
-
 .operations-crud.create {
   height: 320px;
   display: flex;
@@ -110,7 +102,6 @@
   justify-content: left;
   gap: 1rem;
   margin-bottom: 5rem;
-
 
   background-color: white;
 }
@@ -130,8 +121,6 @@
   color: white;
 }
 
-
-
 .createForm {
   max-width: 100%;
   display: flex;
@@ -139,7 +128,6 @@
   justify-content: left;
   padding: 1rem;
   gap: 2rem;
-
 }
 
 #col1-create {
@@ -147,7 +135,6 @@
   flex-direction: column;
   justify-content: center;
   gap: 1rem;
-
 }
 
 #col2-create {
@@ -156,9 +143,6 @@
   justify-content: center;
   gap: 1rem;
 }
-
-
-
 
 .submit-button-container {
   display: flex;
@@ -171,56 +155,59 @@
   margin-right: 1rem;
 }
 
-
 .iconToFlip {
-  transform: rotate(180deg)
+  transform: rotate(180deg);
 }
 
-
 @keyframes flip {
-  0% {transform: rotate(0deg);}
-  100% {transform: rotate(180deg);}
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
 }
 
 .table-actions-container {
-  width: 50%;
+  width: 100%;
+  height: none;
 
   color: white;
 
+  margin-left: 2%;
   display: flex;
-  flex-direction: column;
-  align-items: left;
-  justify-content: left;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .table-actions-title {
-  background-color: #2E2E2E;
+  background-color: #2e2e2e;
   max-width: 150px;
-  font-size: 18px;
+  height: 2rem;
+  padding: 0.4rem;
+  font-size: 14px;
   font-weight: 600;
-  padding: 1.5rem;
+
   text-align: center;
-  border-radius: 10px 20px 0px 0px;
+  border-radius: 0px 10px 5px 0px;
   margin-bottom: 2rem;
 }
 
 .table-actions {
   width: 100%;
-  height: 50px;
-
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: left;
   gap: 2rem;
-  margin-left: 1rem;
 }
 
-.table-actions button{
+.table-actions button {
   min-width: 100px;
-  background-color: white;
-  border: 1px solid black;
-  color :black;
+  background-color: #343459;
+  border: 1px solid #202020;
+  color: white;
   min-height: 2rem;
   border-radius: 10px;
   padding-left: 1rem;
@@ -228,11 +215,37 @@
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 
-  font-weight: 600;
+  font-weight: 200;
 }
 
-.table-actions button:hover{
+.table-actions button:hover {
   background-color: var(--color-secondary);
   border: 1px solid white;
   color: white;
+}
+
+.dropbtn {
+  background-color: var(--color-secondary);
+  border-radius: 5px;
+  border-color: gray;
+  padding: 0.5rem 2rem 0.5rem 2rem;
+  color: white;
+}
+
+.dropdown-title {
+  color: white;
+}
+
+.dropdown {
+  position: relative;
+  display: flex;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+}
+
+.show {
+  display: flex;
 }
